Corrige bug com dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -103,7 +103,7 @@ select:focus[data-flux-control] {
 }
 
 @plugin "daisyui/theme" {
-   name: "mytheme";
+   name: "light";
   default: true; /* set as default */
   prefersdark: false; /* set as default dark mode (prefers-color-scheme:dark) */
   color-scheme: light; 
